--- a/static/css/swiper.css
+++ b/static/css/swiper.css
@@ -20,6 +20,3 @@
     -webkit-align-items: center;
     align-items: center;
   }
-  /* .swiper-button-next, .swiper-button-prev {
-    background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%…2L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23f2f2f2'%2F%3E%3C%2Fsvg%3E)!important;
-  } */
